test/fails/bad_types/add_tags.lgl
tag a is vec3;

void main() {
    a v1 = [0., 0., 0.];
    a v2 = [1., 1., 1.];
    a v3 = v1 + v2;
    print v3;
}